--- a/shopgpt_vue_app/src/assets/global.css
+++ b/shopgpt_vue_app/src/assets/global.css
@@ -1,67 +1,55 @@
 /* global.css */
 
 body {
-  font-family: Arial, sans-serif;
-  line-height: 1.5;
-  color: #333;
+  font-family: 'Roboto', sans-serif;
 }
 
-#app {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+.check-list {
+  margin: 0;
+  padding-left: 1.2rem;
 }
 
-.choices {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 20px;
+.check-list li {
+  position: relative;
+  list-style-type: none;
+  padding-left: 2.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.choice-card {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 20px;
-  width: calc(33% - 20px);
-  box-sizing: border-box;
+.check-list li:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: -2px;
+    width: 5px;
+    height: 11px;
+    border-width: 0 2px 2px 0;
+    border-style: solid;
+    border-color: #00a8a8;
+    transform-origin: bottom left;
+    transform: rotate(45deg);
 }
 
-.pros-cons {
-  display: flex;
-  justify-content: space-between;
+.cross-list {
+  margin: 0;
+  padding-left: 1.2rem;
 }
 
-.qualities-properties {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-size: 20px;
-  margin-bottom: 20px;
-  margin-top: 40px;
-  text-align: center;
+.cross-list li {
+  position: relative;
+  list-style-type: none;
+  padding-left: 2.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.select-quality {
-  width: 100%;
-}
-
-.search-form {
-  margin: 0 auto;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-}
-
-.search-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 20px;
-  background-color: #007BFF;
-  border: none;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
-  display: block;
-  margin: 0 auto;
+.cross-list li::before {
+    content: 'X';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: -2px;
+    width: 5px;
+    height: 11px;
+    color: red;
 }
