--- a/shopgpt_vue_app/src/assets/global.css
+++ b/shopgpt_vue_app/src/assets/global.css
@@ -74,3 +74,13 @@ body {
 .amazon-price{
   text-align: center;
 }
+
+.price-inputs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-input {
+  display: flex;
+  flex-direction: column;
+}
