--- a/shopgpt_vue_app/src/assets/global.css
+++ b/shopgpt_vue_app/src/assets/global.css
@@ -12,7 +12,7 @@ body {
 .check-list li {
   position: relative;
   list-style-type: none;
-  padding-left: 2.5rem;
+  padding-left: 1rem;
   margin-bottom: 0.5rem;
 }
 
@@ -26,7 +26,7 @@ body {
     height: 11px;
     border-width: 0 2px 2px 0;
     border-style: solid;
-    border-color: #00a8a8;
+    border-color: lightgreen;
     transform-origin: bottom left;
     transform: rotate(45deg);
 }
@@ -129,5 +129,9 @@ h4 {
 
 .my-input .el-input__inner {
   height: 70px;  /* adjust as needed */
+}
+
+.my-input-top .el-input__inner {
+  height: 12px;  /* adjust as needed */
 }
 
